--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "icon" type = "image/png" href = "./img/film.png">
-    <title>Films-nikname 1121</title>
+    <title>Pokemons</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/icon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/icon/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/icon/favicon-16x16.png">
 <link rel="manifest" href="/icon/site.webmanifest">
-<link rel="mask-icon" href="/icon/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="mask-icon" href="/icon/safari-pinned-tab.svg" color="#ffffff">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="./style.css">
@@ -27,7 +27,7 @@
         <section class="films">
             <div class="container">
                 <form class="form">
-                    <input class="input films__input-serach" type="text" placeholder="Search film ...">
+                    <input class="input films__input-serach" type="text" autofocus autocomplete="off" placeholder="Search film ...">
                     <div class="films__filter-wrapper">
                         <select class="input films__select">
                             <option class="films__option" value="All">All</option>
